--- a/src/app/core/layouts/blog-layout/components/blog-navigation/blog-navigation.component.scss
+++ b/src/app/core/layouts/blog-layout/components/blog-navigation/blog-navigation.component.scss
@@ -7,7 +7,6 @@
 
     width: 100%;
 
-    margin-top: 20px;
     height: 70px;
 }
 
@@ -17,7 +16,6 @@
         display: flex;
         align-items: center;
 
-        right: 0px;
         column-gap: 5px;
         user-select: none;
     }
