--- a/src/app/core/layouts/blog-layout/components/blog/blog.component.scss
+++ b/src/app/core/layouts/blog-layout/components/blog/blog.component.scss
@@ -1,8 +1,11 @@
 :host {
     display: flex;
     justify-content: center;
+    align-self: center;
+    flex-direction: column;
     padding: 0px 25px 180px;
     background-color: transparent;
+    gap: 40px;
 }
 
 .content {
@@ -13,6 +16,8 @@
     flex-direction: column;
     align-items: center;
     row-gap: 40px;
+    margin: 0 auto;
+
 }
 
 :host ::ng-deep.mat-mdc-progress-spinner .mdc-circular-progress__indeterminate-circle-graphic {
